--- a/package.json
+++ b/package.json
@@ -3,8 +3,13 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"bcrypt-nodejs": "0.0.3",
 		"express": "^4.17.1",
+		"jsonwebtoken": "^8.5.1",
+		"mongoose": "^5.7.1",
 		"morgan": "^1.9.1",
+		"passport": "^0.4.0",
+		"passport-jwt": "^4.0.0",
 		"react": "^16.9.0",
 		"react-dom": "^16.9.0",
 		"react-scripts": "3.1.1"
